# wasm-exec-api

./: Cargo.toml  README.md  linking.wasm  linking.wat  test.wasm  test.wat  utils.wasm  utils.wat
.github/workflows/: ci.yml
examples/wasi/: run_example.sh  text.wat
examples/wasi/functions/: Cargo.toml
examples/wasi/functions/src/: lib.rs
examples/wasi/runner/: Cargo.toml
examples/wasi/runner/src/: main.rs
p2p/: Cargo.toml
p2p/src/: behaviour.rs  logger.rs  main.rs  service.rs  store.rs
src/: config.rs  lib.rs  local_db.rs  logger.rs  main.rs  server.rs  utils.rs  wasm.rs
src/p2p/: mod.rs  service.rs  store.rs
src/server/: execute.rs  index.rs  mod.rs  register.rs
utils/: Cargo.toml
utils/src/: lib.rs  wasm.rs
