[package]
name = "wasm-exec-api"
version = "0.1.0"
authors = ["austinabell <austinabell8@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.0.0-alpha.3"
actix-rt = "1.1"
serde = "1.0"
wasmer-runtime = "0.17.1"
hex = "0.4.2"
wasmer-runtime-core = "0.17.1"
async-log = "2.0"
log = "0.4.8"
pretty_env_logger = "0.4"

[dev-dependencies]
serde_json = "1.0"