[package]
name = "wasm-exec-api"
version = "0.1.0"
authors = ["austinabell <austinabell8@gmail.com>"]
edition = "2018"

[package.metadata.docs.rs]
features = ["p2p"]

[dependencies]
serde = "1.0"
wasmer-runtime = "0.17.1"
hex = "0.4.2"
wasmer-runtime-core = "0.17.1"
async-log = "2.0"
log = "0.4.8"
pretty_env_logger = "0.4"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
argh = "0.1.3"
sled = "0.34.4"
dirs = "3.0"
serde_cbor = "0.11.0"
serde_tuple = "0.5"
tide = "0.14.0"
async-std = { version = "1.6.3", features = ["attributes"] }
anyhow = "1.0"
libp2p = { version = "0.29", default_features = false, features = [
    "kad",
    "identify",
    "ping",
    "mdns-async-std",
    "yamux",
    "tcp-async-std",
    "dns",
    "mplex",
    "websocket",
    "noise"
], optional = true }
futures = { version = "0.3.6", optional = true }

[features]
p2p = ["libp2p", "futures"]

[dev-dependencies]
http-types = "2.5.0"
surf = "2.0"
portpicker = "0.1.0"
