[package]
name = "p2p"
version = "0.1.0"
authors = ["austinabell <austinabell8@gmail.com>"]
edition = "2018"

[dependencies]
libp2p = { version = "0.29", default_features = false, features = [
    "kad",
    "identify",
    "ping",
    "mdns-async-std",
    "yamux",
    "tcp-async-std",
    "dns",
    "mplex",
    "websocket",
    "noise"
] }
futures = "0.3.6"
async-std = "1.6.3"
wasm-exec-api = { path = "../" }
pretty_env_logger = "0.4"
anyhow = "1.0"
serde_cbor = "0.11.0"
log = "0.4"
async-log = "2.0"
