[package]
name = "wasm-exec-utils"
version = "0.1.0"
authors = ["austinabell <austinabell8@gmail.com>"]
edition = "2018"

[dependencies]
wasmer-runtime = "0.17.1"
serde = "1.0"
serde_cbor = "0.11.0"
serde_tuple = "0.5"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
anyhow = "1.0"
